# MobileVotingCoreCryptography

./: .commitlintrc.js  .gitignore  .gitmodules  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: project-task.md
.github/workflows/: build-release.yml  check-tamarin-models.yml  run-makefile-for-clafer-model.yml  run-makefile-for-cpv-docker-image.yml  run-makefile-for-ple-docker-image.yml  (+13 more)
assurance/: Makefile  README.md
docs/: ci_cd_cv.md  isabelle-crypto.md  team.md
implementations/rust/workspace/crypto/: CHANGELOG.md  Cargo.toml  DEVELOPER.md  README.md  clippy.toml
implementations/rust/workspace/crypto/benches/: large_vector.rs  shuffle.rs
implementations/rust/workspace/crypto/macros/custom_warning_macro/: Cargo.toml
implementations/rust/workspace/crypto/macros/custom_warning_macro/src/: lib.rs
implementations/rust/workspace/crypto/macros/vser_derive/: Cargo.toml
implementations/rust/workspace/crypto/macros/vser_derive/src/: lib.rs
implementations/rust/workspace/crypto/src/: context.rs  lib.rs
implementations/rust/workspace/crypto/src/cryptosystem/: elgamal.rs  mod.rs  naoryung.rs
implementations/rust/workspace/crypto/src/dkgd/: dealer.rs  mod.rs  recipient.rs  tests.rs
implementations/rust/workspace/crypto/src/groups/: mod.rs
implementations/rust/workspace/crypto/src/groups/p256/: element.rs  group.rs  mod.rs  scalar.rs  tests.rs
implementations/rust/workspace/crypto/src/groups/productgroup/: element.rs  mod.rs  scalar.rs  tests.rs
implementations/rust/workspace/crypto/src/groups/ristretto255/: element.rs  group.rs  mod.rs  scalar.rs  tests.rs
implementations/rust/workspace/crypto/src/traits/: groups.rs  mod.rs
implementations/rust/workspace/crypto/src/utils/: error.rs  hash.rs  mod.rs  rng.rs  signatures.rs
implementations/rust/workspace/crypto/src/utils/serialization/: fixed.rs  mod.rs  serde.rs  tests.rs  variable.rs
implementations/rust/workspace/crypto/src/zkp/: dlogeq.rs  mod.rs  pleq.rs  schnorr.rs  shuffle.rs
(+506 files in other folders)
