[package]
name = "crypto"
version = "0.2.0"
license = "Apache-2.0"
edition = "2024"

[dependencies]

# curves
curve25519-dalek = {version = "4.1.3", features = ["rand_core", "digest", "precomputed-tables"] }
p256 = { version = "0.13.2", features = ["arithmetic", "std", "hash2curve"] }

# hashing
sha3 = "0.10"

# rng
rand = { version = "0.8", features = ["std"] }

# signatures
ed25519-dalek = {version = "2.2.0", features=["rand_core"] }

# misc
thiserror = "1.0.50"
rayon = { version = "1.10.0", optional = true }
cfg-if = "1.0.1"

# serialization
vser_derive = { path = "./macros/vser_derive" }
serde = { version = "1.0.219", features=["derive"], optional = true}

hex = "0.4.3"
custom_warning_macro = { path = "../macros/custom_warning_macro" }

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"
test = true
name = "crypto"

[features]
default = ["client", "server"]
server = ["dep:rayon"]
client = []
custom-warnings = ["custom_warning_macro/on"]
serde = ["dep:serde"]

[[bench]]
name = "large_vector"
harness = true

[[bench]]
name = "shuffle"
harness = true

[dev-dependencies]
serde = { version = "1.0.219", features=["derive"] }
bincode = { version = "2.0.1", features=["serde"] }

[lints.rustdoc]
missing_crate_level_docs = "deny"
broken_intra_doc_links = "deny"

[lints.rust]
missing_docs = "deny"
unsafe_code = "forbid"
private_interfaces = "warn"
private_bounds = "warn"
unnameable_types = "warn"
# https://github.com/taiki-e/cargo-llvm-cov?tab=readme-ov-file#exclude-code-from-coverage
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }

[lints.clippy]
missing_docs_in_private_items = "deny"
missing_errors_doc = "deny"
missing_panics_doc = "deny"
doc_markdown = "deny"
unwrap_used = "deny"
print_stdout = "deny"
print_stderr = "deny"
# Note: 'pedantic' is a group, not a single lint
pedantic = "warn"
arithmetic_side_effects = "warn"
shadow_unrelated = "warn"
cognitive_complexity = "warn"
